--- a/UnrealStudy/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealStudy/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -79,7 +79,7 @@ bLaunchSeparateServer=False
 PlayNetMode=PIE_ListenServer
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=2
+PlayNumberOfClients=1
 ServerPort=17777
 ClientWindowWidth=640
 AutoConnectToServer=True
@@ -95,7 +95,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=954,Y=1010)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@DESKTOP-RC6IP6A
 LastExecutedLaunchName=DESKTOP-RC6IP6A
 LastExecutedPIEPreviewDevice=
@@ -105,7 +105,6 @@ NewWindowWidth=954
 NewWindowHeight=1010
 MultipleInstancePositions=(X=37,Y=14)
 MultipleInstancePositions=(X=960,Y=0)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -207,7 +206,7 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-UnrealStudy.TimeStamp=2022.07.13-11.44.01
+UnrealStudy.TimeStamp=2022.07.13-14.11.04
 UnrealStudy.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2022.04.07-05.04.52
 StorageServerClient.LastCompileMethod=Unknown
@@ -1593,22 +1592,30 @@ AutomationTestSettings.MiscAutomationSetups=True
 AutomationTestSettings.ExternalTools=True
 AutomationTestSettings.Screenshots=True
 CrashReporterSettings.CrashReporter=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.HLOD=True
+PlayerStart.WorldPartition=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem1=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
-MRUItem2=/Game/NiagaraQuickStart/Niagaras/FX_FootstepDustPoof
-MRUItem3=/Game/NiagaraQuickStart/Maps/NiagaraMap
-MRUItem4=/Game/Characters/Mannequins/Animations/ABP_Quinn
-MRUItem5=/Game/Characters/Mannequins/Animations/Manny/BS_MM_WalkRun
-MRUItem6=/Game/Characters/Mannequins/Animations/ABP_Manny
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem8=/Game/Characters/Mannequins/Animations/Manny/MM_Run_Fwd
-MRUItem9=/Game/NiagaraQuickStart/Materials/M_DustPoof
-MRUItem10=/Niagara/Modules/Update/Material/DynamicMaterialParameters
-MRUItem11=/Game/StarterContent/Props/SM_Rock
-MRUItem12=/Game/StarterContent/Props/SM_Bush
-MRUItem13=/Game/NiagaraQuickStart/Blueprints/BP_Niagara_Character
+MRUItem0=/Game/NiagaraQuickStart/Blueprints/BP_Niagara_Character
+MRUItem1=/Game/Characters/Mannequins/Meshes/SK_Mannequin
+MRUItem2=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
+MRUItem3=/Game/NiagaraQuickStart/Niagaras/FX_FootstepDustPoof
+MRUItem4=/Game/NiagaraQuickStart/Maps/NiagaraMap
+MRUItem5=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem6=/Game/Characters/Mannequins/Animations/Manny/BS_MM_WalkRun
+MRUItem7=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem9=/Game/Characters/Mannequins/Animations/Manny/MM_Run_Fwd
+MRUItem10=/Game/NiagaraQuickStart/Materials/M_DustPoof
+MRUItem11=/Niagara/Modules/Update/Material/DynamicMaterialParameters
+MRUItem12=/Game/StarterContent/Props/SM_Rock
+MRUItem13=/Game/StarterContent/Props/SM_Bush
 MRUItem14=/Game/ThirdPerson/Maps/ThirdPersonMap
 MRUItem15=/Game/NiagaraQuickStart/Maps/ThirdPersonMap
 MRUItem16=/Game/ThirdPerson/Maps/ThirdPersonMap_2
@@ -1628,6 +1635,7 @@ MRUItem17=/Game/LevelPrototyping/Materials/MI_Solid_Blue
 /Game/Characters/Mannequins/Animations/ABP_Quinn.ABP_Quinn=1
 /Game/Characters/Mannequins/Animations/ABP_Manny.ABP_Manny=1
 /Game/Characters/Mannequins/Meshes/SK_Mannequin.SK_Mannequin=1
+/Game/NiagaraQuickStart/Blueprints/BP_Niagara_Character.BP_Niagara_Character=1
 
 [MaterialInstanceEditor]
 bShowGrid=True
