Delegate AddDynamic 을 하기 위해선 함수에 UFUNCTION()를 붙이자.
UFUNCTION 매개변수로 EXEC이 있으면 명령창에서 함수 호출 가능
World->ServerTravel : 모든 PlayerController 같이 맵 이동 (URL에 ?listen 붙이면 listening server 로서 기능)
PlayerController->ClientTravle : 해당 PC만 맵 이동
!! UE5에서 ThirdPerson Template 으로 시작한 경우 (혹은 아니더라도) 빌드 했을 때 Assert Index NONE ~~ Animation [117] 오류 뜨는 경우면
MyGameMode.cpp 의 생성자 안에 있는 자동 생성 구문 (기본으로 우리의 ThirdPerson Character를 사용하게 하겠다) 지울것

--- a/UnrealStudy/Config/DefaultEngine.ini
+++ b/UnrealStudy/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/PuzzleGame/Maps/Lobby.Lobby
+EditorStartupMap=/Game/PuzzleGame/Maps/Lobby.Lobby
 GlobalDefaultGameMode="/Script/UnrealStudy.UnrealStudyGameMode"
+GameInstanceClass=/Script/UnrealStudy.PuzzlePlatformsGameInstance
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_14
