--- a/UnrealStudy/Saved/Config/WindowsEditor/Input.ini
+++ b/UnrealStudy/Saved/Config/WindowsEditor/Input.ini
@@ -1,1 +1,15 @@
+[/Script/Engine.Console]
+HistoryBuffer=asdfs
+HistoryBuffer=ChangeSize 23
+HistoryBuffer=ChangeSize 2
+HistoryBuffer=Join Sser
+HistoryBuffer=JOIN SDFSFSDFSD
+HistoryBuffer=Join SDFSDFFS
+HistoryBuffer=Join 192.168.0.1
+HistoryBuffer=Join 222.110.253.466
+HistoryBuffer=Join 222.110.253.46:7777
+HistoryBuffer=Join 226.110.253.46
+HistoryBuffer=Join 226.110.253.46:7777
+HistoryBuffer=Host
+HistoryBuffer=Join 222.110.253.46
 
