--- a/UnrealStudy/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealStudy/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -67,7 +67,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=157,Y=87)
+NewWindowPosition=(X=2170,Y=142)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -79,7 +79,7 @@ bLaunchSeparateServer=False
 PlayNetMode=PIE_Standalone
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=1
+PlayNumberOfClients=2
 ServerPort=17777
 ClientWindowWidth=640
 AutoConnectToServer=True
@@ -95,16 +95,16 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1600,Y=836)
+LastSize=(X=1094,Y=588)
 LastExecutedLaunchDevice=Windows@DESKTOP-RC6IP6A
 LastExecutedLaunchName=DESKTOP-RC6IP6A
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=1600
-NewWindowHeight=836
-MultipleInstancePositions=(X=157,Y=87)
-MultipleInstancePositions=(X=1912,Y=0)
+NewWindowWidth=1094
+NewWindowHeight=588
+MultipleInstancePositions=(X=2170,Y=142)
+MultipleInstancePositions=(X=662,Y=169)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -132,8 +132,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/PuzzlePlatforms/Maps/Lobby
-MRUItem1=/Game/PuzzlePlatforms/Maps/MainMenu
+MRUItem0=/Game/PuzzlePlatforms/Maps/MainMenu
+MRUItem1=/Game/PuzzlePlatforms/Maps/Lobby
 MRUItem2=/Game/PuzzleGame/Maps/Lobby
 MRUItem3=/Game/PuzzleGame/Maps/Map_PuzzleGameMap
 MRUItem4=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -242,10 +242,10 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/PuzzlePlatforms/Maps/Lobby
+LastLevel=/Game/PuzzlePlatforms/Maps/MainMenu
 
 [ModuleFileTracking]
-UnrealStudy.TimeStamp=2022.07.19-11.01.21
+UnrealStudy.TimeStamp=2022.07.20-14.44.33
 UnrealStudy.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2022.04.07-05.04.52
 StorageServerClient.LastCompileMethod=Unknown
@@ -2281,28 +2281,73 @@ PropertyWrapper.Events=True
 MaterialExpressionFontSampleParameter.General=True
 MaterialExpressionFontSampleParameter.MaterialExpression=True
 MaterialExpressionFontSampleParameter.MaterialExpressionFontSample=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+WidgetSwitcher.Layout=True
+WidgetSwitcher.Switcher=True
+WidgetSwitcher.Accessibility=True
+WidgetSwitcher.Behavior=True
+WidgetSwitcher.Render Transform=True
+WidgetSwitcher.Performance=True
+WidgetSwitcher.Clipping=True
+WidgetSwitcher.Navigation=True
+WidgetSwitcher.Localization=True
+EditableTextBox.Layout=True
+EditableTextBox.Content=True
+EditableTextBox.Appearance=True
+EditableTextBox.Accessibility=True
+EditableTextBox.Behavior=True
+EditableTextBox.Render Transform=True
+EditableTextBox.Performance=True
+EditableTextBox.Clipping=True
+EditableTextBox.Navigation=True
+EditableTextBox.Localization=True
+EditableTextBox.Events=True
+EditableText.Layout=True
+EditableText.Content=True
+EditableText.Appearance=True
+EditableText.Accessibility=True
+EditableText.Behavior=True
+EditableText.Render Transform=True
+EditableText.Performance=True
+EditableText.Clipping=True
+EditableText.Navigation=True
+EditableText.Localization=True
+EditableText.Events=True
 
 [ContentBrowserRecent]
-MRUItem0=/Engine/EngineMaterials/DefaultTextMaterialOpaque
-MRUItem1=/Game/PuzzlePlatforms/Maps/MainMenu
-MRUItem2=/Game/PuzzlePlatforms/MenuSystem/WBP_MainMenu
-MRUItem3=/Game/PuzzlePlatforms/Maps/Lobby
-MRUItem4=/Game/PuzzleGame/MenuSystem/WBP_MainMenu
-MRUItem5=/Game/PuzzleGame/Blueprints/BP_PuzzleGameCharacter
-MRUItem6=/Game/PuzzleGame/Maps/Lobby
-MRUItem7=/Game/PuzzleGame/Blueprints/BP_PlatformTrigger
-MRUItem8=/Game/PuzzleGame/Maps/Map_PuzzleGameMap
-MRUItem9=/Game/PuzzleGame/Blueprints/BP_PlatformTrigger2
-MRUItem10=/Game/PuzzleGame/Blueprints/GM_PuzzleGameMode
-MRUItem11=/Game/PuzzleGame/Blueprints/MyUnrealStudyGameMode
-MRUItem12=/Game/PuzzleGame/Blueprints/MyUnrealStudyCharacter
-MRUItem13=/Game/NiagaraQuickStart/Blueprints/BP_Niagara_Character
-MRUItem14=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem15=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
-MRUItem16=/Game/NiagaraQuickStart/Niagaras/FX_FootstepDustPoof
-MRUItem17=/Game/NiagaraQuickStart/Maps/NiagaraMap
-MRUItem18=/Game/Characters/Mannequins/Animations/ABP_Quinn
-MRUItem19=/Game/Characters/Mannequins/Animations/Manny/BS_MM_WalkRun
+MRUItem0=/Game/PuzzlePlatforms/Maps/MainMenu
+MRUItem1=/Game/PuzzlePlatforms/MenuSystem/WBP_MainMenu
+MRUItem2=/Game/PuzzlePlatforms/Blueprints/BP_PuzzleGameCharacter
+MRUItem3=/Engine/EngineMaterials/DefaultTextMaterialOpaque
+MRUItem4=/Game/PuzzlePlatforms/Maps/Lobby
+MRUItem5=/Game/PuzzleGame/MenuSystem/WBP_MainMenu
+MRUItem6=/Game/PuzzleGame/Blueprints/BP_PuzzleGameCharacter
+MRUItem7=/Game/PuzzleGame/Maps/Lobby
+MRUItem8=/Game/PuzzleGame/Blueprints/BP_PlatformTrigger
+MRUItem9=/Game/PuzzleGame/Maps/Map_PuzzleGameMap
+MRUItem10=/Game/PuzzleGame/Blueprints/BP_PlatformTrigger2
+MRUItem11=/Game/PuzzleGame/Blueprints/GM_PuzzleGameMode
+MRUItem12=/Game/PuzzleGame/Blueprints/MyUnrealStudyGameMode
+MRUItem13=/Game/PuzzleGame/Blueprints/MyUnrealStudyCharacter
+MRUItem14=/Game/NiagaraQuickStart/Blueprints/BP_Niagara_Character
+MRUItem15=/Game/Characters/Mannequins/Meshes/SK_Mannequin
+MRUItem16=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
+MRUItem17=/Game/NiagaraQuickStart/Niagaras/FX_FootstepDustPoof
+MRUItem18=/Game/NiagaraQuickStart/Maps/NiagaraMap
+MRUItem19=/Game/Characters/Mannequins/Animations/ABP_Quinn
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -2327,6 +2372,7 @@ MRUItem19=/Game/Characters/Mannequins/Animations/Manny/BS_MM_WalkRun
 /Game/PuzzleGame/MenuSystem/WBP_MainMenu.WBP_MainMenu=1
 /Game/PuzzlePlatforms/MenuSystem/WBP_MainMenu.WBP_MainMenu=1
 /Engine/EngineMaterials/DefaultTextMaterialOpaque.DefaultTextMaterialOpaque=1
+/Game/PuzzlePlatforms/Blueprints/BP_PuzzleGameCharacter.BP_PuzzleGameCharacter=1
 
 [MaterialInstanceEditor]
 bShowGrid=True
@@ -2577,15 +2623,15 @@ ResonanceAudioSettings="\"Object\" "
 TcpMessagingSettings="\"Object\" "
 UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
-TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
-TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
-Widget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" "
-Visual="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 CanvasPanel="\"Object\" "
-PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" "
+PanelWidget="\"Object\" "
 VerticalBox="\"Object\" "
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" "
-ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" "
+ContentWidget="\"Object\" "
 SizeBox="\"Object\" "
 Overlay="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" "
@@ -2599,6 +2645,9 @@ UserWidgetBlueprint="\"Object\" "
 MainMenu="\"Object\" "
 MaterialExpressionFontSampleParameter="\"Object\" "
 MaterialExpressionFontSample="\"Object\" "
+WidgetSwitcher="\"Object\" "
+EditableTextBox="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Padding\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
+EditableText="\"Object\" \"Object.Appearance.WidgetStyle\" "
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2783,7 +2832,7 @@ bPreloadProjectModules=True
 bPreloadProjectPluginModules=True
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
