Add Knight Character & Add Animation (Walk / Attack)
To do :
Add Jump & another animations
Add Damage to Enemy

--- a/UnrealStudy/Config/DefaultEngine.ini
+++ b/UnrealStudy/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/KrazyKarts/Maps/RaceMap.RaceMap
-EditorStartupMap=/Game/KrazyKarts/Maps/RaceMap.RaceMap
+GameDefaultMap=/Game/AnimationTest/Map/Map_AnimTest.Map_AnimTest
+EditorStartupMap=/Game/AnimationTest/Map/Map_AnimTest.Map_AnimTest
 GlobalDefaultGameMode="/Script/UnrealStudy.UnrealStudyGameMode"
 GameInstanceClass=/Script/UnrealStudy.PuzzlePlatformsGameInstance
 
