--- a/UnrealStudy/Config/DefaultEngine.ini
+++ b/UnrealStudy/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-
+GameDefaultMap=/Game/RPG/Levels/NewWorld.NewWorld
+EditorStartupMap=/Game/RPG/Levels/NewWorld.NewWorld
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
